# dancing-dots

./: .gitignore  LICENSE  README.md  pyproject.toml
helpers/colmap/visualization/: __init__.py  plotly.py
ipynbs/: EDA.ipynb  kaggle.ipynb
mts/core/embeddings/: base.py  vlad.py
mts/helpers/colmap/: database.py  h5_to_db.py
mts/utils/: dict.py  image.py
mts/viz/colmap/plotly/: camera.py
mts/viz/d3/plotly/: axes.py  point.py
plycam/: axes.py  core.py  point.py
plycam/utils/: __init__.py
src/utils/: core.py
